# lk-lambdex

./: CHANGELOG.md  README.md  pyproject.toml
examples/: 01_simple_examples.py  02_weak_reference.py  03_fibonacci.py  04_auto_deliver_context_info.py  04_globals_and_locals.py
lk_lambdex/: __init__.py  main.py
