[tool.poetry]
name = "lk-lambdex"
version = "1.0.0"
description = "A simple way to compose multi-line anonymous function in Python."
authors = ["Likianta <likianta@foxmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
